fix the color dropdown

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
               <div id="shirt-colors" class="shirt-colors">
                 <label for="color">Color:</label>
                 <select id="color" disabled>
-                  <option value="" selected disabled hidden>
+                  <option value="" selected hidden>
                     Select a design theme above
                   </option>
                   <option data-theme="js puns" value="cornflowerblue">
